added question if diagnosed

--- a/frontend/partials/showingsymptoms.html
+++ b/frontend/partials/showingsymptoms.html
@@ -24,7 +24,7 @@
           <div class="notification">
             <h6>
                 
-            Have you been diagnosed with the Coronovirus?
+            Have you shown symptoms of the Coronovirus? Symptoms include respiratory symptoms, fever, cough, shortness of breath and breathing difficulties
             </h6>
           </div>
         </div>
