--- a/frontend/partials/howlong.html
+++ b/frontend/partials/howlong.html
@@ -12,7 +12,7 @@
     <section class="hero has-background-info is-small">
       <div class="hero-body">
         <div class="container">
-          <h1 class="title has-text-centered has-text-white-ter">
+          <h1 class="title has-text-centered has-text-white">
             Questionnaire 
           </h1>
         </div>
