"Questionnaire" white again

--- a/frontend/partials/whatsymptoms.html
+++ b/frontend/partials/whatsymptoms.html
@@ -12,8 +12,8 @@
     <section class="hero has-background-info is-small">
       <div class="hero-body">
         <div class="container">
-          <h1 class="title has-text-centered">
-            <font color="white">Questionnaire </font>
+          <h1 class="title has-text-centered has-text-white">
+            Questionnaire
           </h1>
         </div>
       </div>
