--- a/frontend/partials/beenDiagnosed.html
+++ b/frontend/partials/beenDiagnosed.html
@@ -19,7 +19,7 @@
     </section>
     <sesction>
         <br>
-        <div class="container">
+        <div class="container  has-text-centered">
           <div class="notification">
             <h6>  
             Have you been diagnosed with the Coronovirus?
@@ -28,7 +28,7 @@
         </div>
     </sesction>
     <section>
-        <div class="container">
+        <div class="container  has-text-centered">
         <div class="section">
         <label class="radio">
           <input type="radio" name="answer">
