--- a/frontend/partials/howlong.html
+++ b/frontend/partials/howlong.html
@@ -30,8 +30,8 @@
     <section>
         <div class="section">
         <form>
-            <label for="days"></label><br>
-            <input type="number" id="days" name="days">
+            <label for="days"></label>
+            <input type="number" id="days" name="days" style="width: 5em">
             days
         </form>
     </section>
