--- a/frontend/partials/locationhistory.html
+++ b/frontend/partials/locationhistory.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.css"
+      rel="stylesheet"
+    />
+
+    <link
       rel="shortcut icon"
       type="image/x-icon"
       href="docs/images/favicon.ico"
@@ -17,57 +22,22 @@
       integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
       crossorigin=""
     />
+
+    <style>
+      #mapid {
+        height: 400px;
+      }
+    </style>
   </head>
   <body>
-    <div id="mapid" style="width: 600px; height: 400px;"></div>
-    <!-- <script>
-      var mymap = L.map("mapid").setView([51.505, -0.09], 13);
-
-      L.tileLayer(
-        "https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw",
-        {
-          maxZoom: 18,
-          attribution:
-            'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
-            '<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
-            'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-          id: "mapbox/streets-v11",
-          tileSize: 512,
-          zoomOffset: -1
-        }
-      ).addTo(mymap);
-
-      L.marker([51.5, -0.09])
-        .addTo(mymap)
-        .bindPopup("<b>Hello world!</b><br />I am a popup.")
-        .openPopup();
-
-      L.circle([51.508, -0.11], 500, {
-        color: "red",
-        fillColor: "#f03",
-        fillOpacity: 0.5
-      })
-        .addTo(mymap)
-        .bindPopup("I am a circle.");
-
-      L.polygon([
-        [51.509, -0.08],
-        [51.503, -0.06],
-        [51.51, -0.047]
-      ])
-        .addTo(mymap)
-        .bindPopup("I am a polygon.");
-
-      var popup = L.popup();
-
-      function onMapClick(e) {
-        popup
-          .setLatLng(e.latlng)
-          .setContent("You clicked the map at " + e.latlng.toString())
-          .openOn(mymap);
-      }
-
-      mymap.on("click", onMapClick);
-    </script> -->
+    <div class="container">
+      <div class="columns">
+        <div class="column">
+          <div class="box">
+            <div id="mapid"></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
