--- a/frontend/partials/howlong.html
+++ b/frontend/partials/howlong.html
@@ -28,13 +28,15 @@
         </div>
     </section>
     <section>
+      <div class="container">
         <div class="section">
         <form>
             <label for="days"></label>
             <input type="number" id="days" name="days" style="width: 5em">
             days
         </form>
-    </section>
+      </div>
+      <div class="container">
         <div class="field is-grouped">
             <div class="control">
               <button class="button is-link">Continue</button>
@@ -44,7 +46,7 @@
             </div>
           </div>
         </div>
-        
+      </div>
     </section>
   </body>
 </html>
