--- a/frontend/partials/login.html
+++ b/frontend/partials/login.html
@@ -18,7 +18,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css" />
-<script src="https://unpkg.com/axios/dist/axios.min.js" type="ab7dd360021a5d1909bacdc7-text/javascript"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <style media="screen">
 
 html,body {
@@ -94,7 +94,7 @@ input.login-error, input.login-error:hover, input.login-error:focus, input.login
 </div>
 </div>
 </section>
-<script type="ab7dd360021a5d1909bacdc7-text/javascript">
+<script>
 function validateEmail(email) {
   var re = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
   return re.test(email);
@@ -151,6 +151,5 @@ document.body.addEventListener('keydown', function (event) {
     loginAction();
   }
 });
-</script>
-<script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="ab7dd360021a5d1909bacdc7-|49" defer=""></script></body>
+</script></body>
 </html>
