--- a/frontend/partials/beenDiagnosed.html
+++ b/frontend/partials/beenDiagnosed.html
@@ -22,7 +22,7 @@
         <div class="container  has-text-centered">
           <div class="notification">
             <h6>  
-            Have you been diagnosed with the Coronovirus?
+            1. Have you been diagnosed with the Coronovirus?
             </h6>
           </div>
         </div>
