--- a/frontend/partials/howlong.html
+++ b/frontend/partials/howlong.html
@@ -32,7 +32,7 @@
         <div class="section">
         <form>
             <label for="days"></label>
-            <input type="number" id="days" name="days" style="width: 3em; font-size: 18px;">
+            <input type="number" id="days" name="days" pattern="[0-9]" style="width: 3em; font-size: 18px;">
             days
         </form>
       </div>
