--- a/frontend/partials/howlong.html
+++ b/frontend/partials/howlong.html
@@ -22,7 +22,7 @@
         <div class="container">
           <div class="notification">
             <h6>
-                How long have you been showing symptoms?
+                2. How long have you been showing symptoms?
             </h6>
           </div>
         </div>
