--- a/frontend/partials/whatsymptoms.html
+++ b/frontend/partials/whatsymptoms.html
@@ -46,6 +46,10 @@
                 <input type="checkbox">
                 Shortness of breath or difficulty breathing
             </label>
+          <label class="textarea">
+            <textarea></textarea>
+                If there are any other symptoms, please specify here.
+          </label>
            
         </div>
         <div class="field is-grouped">
