--- a/frontend/partials/whatsymptoms.html
+++ b/frontend/partials/whatsymptoms.html
@@ -20,7 +20,7 @@
     </section>
     <sesction>
         <br>
-        <div class="container">
+        <div class="container has-text-centered">
           <div class="notification">
             <h6>
                 
@@ -31,6 +31,9 @@
     </sesction>
     <section>
         <div class="container">
+        <div class="columns">
+            <div class="column"></div>
+            <div class="column">
         <div class="section">
             <label class="checkbox">
                 <input type="checkbox">
@@ -46,17 +49,25 @@
                 <input type="checkbox">
                 Shortness of breath or difficulty breathing
             </label>
-           
+            </div>
+            </div>
+            <div class="column"></div>
         </div>
+    </div>
+        <div class="buttons is-centered">
         <div class="field is-grouped">
+            
             <div class="control">
               <button class="button is-link">Continue</button>
             </div>
             <div class="control">
               <button class="button is-link is-light">Go Back</button>
             </div>
-          </div>
+         
         </div>
+        </div>
+        
+        
         
     </section>
 
