--- a/frontend/partials/showingsymptoms.html
+++ b/frontend/partials/showingsymptoms.html
@@ -20,7 +20,7 @@
     </section>
     <sesction>
         <br>
-        <div class="container">
+        <div class="container has-text-centered">
           <div class="notification">
             <h6>
                 
@@ -30,7 +30,7 @@
         </div>
     </sesction>
     <section>
-        <div class="container">
+        <div class="container has-text-centered">
         <div class="section">
         <label class="radio">
           <input type="radio" name="answer">
