--- a/frontend/partials/beenDiagnosed.html
+++ b/frontend/partials/beenDiagnosed.html
@@ -39,6 +39,8 @@
           No
         </label>
         </div>
+      </div>
+      <div class="buttons is-centered">
         <div class="field is-grouped">
             <div class="control">
               <button class="button is-link">Continue</button>
