added other case

--- a/frontend/partials/whatsymptoms.html
+++ b/frontend/partials/whatsymptoms.html
@@ -23,8 +23,8 @@
         <div class="container has-text-centered">
           <div class="notification">
             <h6>
-                
-            What symptoms do you have?
+
+            3. What symptoms do you have?
             </h6>
           </div>
         </div>
@@ -49,6 +49,12 @@
                 <input type="checkbox">
                 Shortness of breath or difficulty breathing
             </label>
+            <br>
+            <br>
+            <label class="textarea">
+                If you have any other symptoms, please specify here.
+                <textarea cols="200" rows="6"></textarea>
+            </label>
             </div>
             </div>
             <div class="column"></div>
@@ -56,19 +62,19 @@
     </div>
         <div class="buttons is-centered">
         <div class="field is-grouped">
-            
+
             <div class="control">
               <button class="button is-link">Continue</button>
             </div>
             <div class="control">
               <button class="button is-link is-light">Go Back</button>
             </div>
-         
+
         </div>
         </div>
-        
-        
-        
+
+
+
     </section>
 
   </body>
