edited showingsymptoms and howlong
took number off how long and centered stuff on showing symptoms

--- a/frontend/partials/howlong.html
+++ b/frontend/partials/howlong.html
@@ -22,7 +22,7 @@
         <div class="container">
           <div class="notification">
             <h6 class="has-text-centered">
-                2. How long have you been showing symptoms?
+                How long have you been showing symptoms?
             </h6>
           </div>
         </div>
