--- a/frontend/partials/showingsymptoms.html
+++ b/frontend/partials/showingsymptoms.html
@@ -12,8 +12,8 @@
     <section class="hero has-background-info is-small">
       <div class="hero-body">
         <div class="container">
-          <h1 class="title has-text-centered">
-            <font color="white">Questionnaire </font>
+          <h1 class="title has-text-centered has-text-white">
+            Questionnaire
           </h1>
         </div>
       </div>
@@ -28,20 +28,21 @@
             </h6>
           </div>
         </div>
-    </sesction>
+    </section>
     <section>
         <div class="container has-text-centered">
-        <div class="section">
-        <label class="radio">
-          <input type="radio" name="answer">
-          Yes
-        </label>
-        <label class="radio">
-          <input type="radio" name="answer">
-          No
-        </label>
+          <div class="section">
+            <label class="radio">
+              <input type="radio" name="answer">
+                Yes
+            </label>
+            <label class="radio">
+              <input type="radio" name="answer">
+                No
+            </label>
         </div>
-        <div class="field is-grouped">
+        <div class = "buttons is-centered">
+          <div class="field is-grouped">
             <div class="control">
               <button class="button is-link">Continue</button>
             </div>
@@ -50,8 +51,6 @@
             </div>
           </div>
         </div>
-        
     </section>
-
   </body>
 </html>
