--- a/frontend/partials/whatsymptoms.html
+++ b/frontend/partials/whatsymptoms.html
@@ -24,7 +24,7 @@
           <div class="notification">
             <h6>
 
-            3. What symptoms do you have?
+            What symptoms do you have?
             </h6>
           </div>
         </div>
