--- a/frontend/partials/whatsymptoms.html
+++ b/frontend/partials/whatsymptoms.html
@@ -18,17 +18,16 @@
         </div>
       </div>
     </section>
-    <sesction>
+    <section>
         <br>
         <div class="container has-text-centered">
           <div class="notification">
             <h6>
-
             What symptoms do you have?
             </h6>
           </div>
         </div>
-    </sesction>
+    </section>
     <section>
         <div class="container">
         <div class="columns">
@@ -51,7 +50,7 @@
             </label>
             <br>
             <br>
-            <label class="textarea">
+            <label>
                 If you have any other symptoms, please specify here.
                 <textarea cols="200" rows="6"></textarea>
             </label>
@@ -76,6 +75,24 @@
 
 
     </section>
+    <section>
+        <br>
+        <div class="container has-text-centered">
+          <div class="notification">
+            <h6>
+            How long ago were you diagnosed by a doctor?
+            </h6>
+          </div>
+        </div>
+    </section>
+    <div class="container has-text-centered">
+      <div class="section">
+      <form>
+          <label for="days"></label>
+          <input type="number" min="0" max="99" id="days" name="days" style="width: 3em; font-size: 18px;">
+          days
+      </form>
+    </div>
 
   </body>
 </html>
