--- a/frontend/partials/whatsymptoms.html
+++ b/frontend/partials/whatsymptoms.html
@@ -63,7 +63,7 @@
     <div class="container has-text-centered">
       <div class="notification">
         <h6>
-        How long ago were you diagnosed by a doctor?
+        How long ago were you having these symptoms?
         </h6>
       </div>
     </div>
