--- a/frontend/partials/Info Page copy.html
+++ b/frontend/partials/Info Page copy.html
@@ -187,14 +187,12 @@
     </div>
   </section> 
   <section class="section"> 
-    <div class="container"> 
+    <div class="buttons is-centered"> 
       <div class="field is-grouped">
         <div class="control">
           <button class="button is-link">Continue</button>
         </div>
-        <div class="control">
-          <button class="button is-link is-light">Go Back</button>
-        </div>
+        
       </div>
     </div>
   </section>
