edit question boxes
I made the notification things into notification boxes so that they pop off the background more

--- a/frontend/partials/beenDiagnosed.html
+++ b/frontend/partials/beenDiagnosed.html
@@ -20,7 +20,7 @@
     <sesction>
         <br>
         <div class="container  has-text-centered">
-          <div class="notification">
+          <div class="notification box">
             <h6>  
               Have you been diagnosed with the Coronovirus?
             </h6>
