--- a/frontend/partials/showingsymptoms.html
+++ b/frontend/partials/showingsymptoms.html
@@ -21,7 +21,7 @@
     <sesction>
         <br>
         <div class="container has-text-centered">
-          <div class="notification">
+          <div class="notification box">
             <h6>
                 
             Have you shown symptoms of the Coronovirus? Symptoms include respiratory symptoms, fever, cough, shortness of breath and breathing difficulties
