--- a/frontend/partials/whatsymptoms.html
+++ b/frontend/partials/whatsymptoms.html
@@ -21,7 +21,7 @@
     <section>
         <br>
         <div class="container has-text-centered">
-          <div class="notification">
+          <div class="notification box">
             <h6>
             What symptoms do you have?
             </h6>
