--- a/frontend/partials/howlong.html
+++ b/frontend/partials/howlong.html
@@ -20,7 +20,7 @@
     </section>
     <br>
         <div class="container">
-          <div class="notification">
+          <div class="notification box">
             <h6 class="has-text-centered">
                 How long have you been showing symptoms?
             </h6>
