--- a/frontend/partials/whatsymptoms.html
+++ b/frontend/partials/whatsymptoms.html
@@ -61,7 +61,7 @@
     </div>
     <br>
     <div class="container has-text-centered">
-      <div class="notification">
+      <div class="notification box">
         <h6>
         How long have you had these symptoms?
         </h6>
