--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -36,11 +36,26 @@
     </section>
     <section class="section">
       <div class="container">
-        <div class="field">
-          <div class="control">
-            <input class="input" type="name" placeholder="e.g. John Doan">
-              <br>
-              <br>
+        <div class="columns"> 
+          <div class="column"> 
+            <div class="field">
+              <div class="control">
+                <h7>Last Name</h7>
+                <input class="input" type="Last Name" placeholder="e.g. Doan">
+                  <br>
+                  <br>
+              </div>
+            </div>
+          </div>
+          <div class="column"> 
+            <div class="field">
+              <div class="control">
+                <h7>First Name</h7>
+                <input class="input" type="First Name" placeholder="e.g. John">
+                  <br>
+                  <br>
+              </div>
+            </div>
           </div>
         </div>
       </div>
