Added bulleted list

--- a/frontend/partials/showingsymptoms.html
+++ b/frontend/partials/showingsymptoms.html
@@ -24,8 +24,24 @@
           <div class="notification box">
             <h6>
                 
-            Have you shown symptoms of the Coronovirus? Symptoms include respiratory symptoms, fever, cough, shortness of breath and breathing difficulties
+            Have you shown symptoms of the Coronovirus? Symptoms include:
             </h6>
+            <div class="columns">
+              <div class="column"></div>
+              <div class="column"></div>
+              <div class="column">
+            <ul class="has-text-left" style="list-style: circle;">
+                <li>fever</li>
+                <li>Cough</li>
+                <li>Shortness of breath</li>
+                <li>Difficulty breathing</li>
+                <li>Other respiratory symptoms</li>
+            </ul>
+        </div>
+            <div class="column"></div>
+            <div class="column"></div>
+            
+        </div>
           </div>
         </div>
     </section>
