--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -103,7 +103,7 @@
           <div class="field">
             <div class="control">
               <h7> Street Address </h7>
-              <input class="input" type="address" placeholder="e.g. 1234 UMSL Lane">
+              <input class="input" type="text" placeholder="e.g. 1234 UMSL Lane">
               <br>
             </div>
           </div>
@@ -112,7 +112,7 @@
           <div class="field">
             <div class="control">
               <h7> City </h7>
-              <input class="input" type="city" placeholder="e.g. St. Louis">
+              <input class="input" type="text" placeholder="e.g. St. Louis">
               <br> 
             </div>
           </div>
@@ -127,7 +127,7 @@
           <div class="field">
             <div class="control">
               <h7> State/Province </h7>
-              <input class="input" type="State" placeholder="e.g. Missouri">
+              <input class="input" type="text" placeholder="e.g. Missouri">
               <br>
             </div>
           </div>
@@ -136,7 +136,7 @@
           <div class="field">
             <div class="control">
               <h7> Zip Code </h7>
-              <input class="input" type="Zip Code" placeholder="e.g. 63031">
+              <input class="input" maxlength="5" type="tel" placeholder="e.g. 63031">
               <br> 
             </div>
           </div>
@@ -145,7 +145,7 @@
           <div class="field">
             <div class="control">
               <h7> Country </h7>
-              <input class="input" type="Country" placeholder="e.g. USA">
+              <input class="input" type="text" placeholder="e.g. USA">
               <br> 
             </div>
           </div>
@@ -169,7 +169,7 @@
           <div class="field">
             <div class="control">
               <h7> Phone </h7>
-              <input class="input" type="Phone" placeholder="e.g. 3141234567">
+              <input class="input" type="tel" placeholder="e.g. 3141234567">
               <br>
             </div>
           </div>
