--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -151,7 +151,7 @@
           <div class="field">
             <div class="control">
               <h7> Zip Code </h7>
-              <input class="input" maxlength="5" type="tel" placeholder="e.g. 63031">
+              <input class="input" type="number" placeholder="e.g. 63031">
               <br> 
             </div>
           </div>
@@ -184,7 +184,7 @@
           <div class="field">
             <div class="control">
               <h7> Phone </h7>
-              <input class="input" type="tel" placeholder="e.g. 3141234567">
+              <input class="input" type="number" placeholder="e.g. 3141234567">
               <br>
             </div>
           </div>
