--- a/frontend/partials/addcontactsfrommap.html
+++ b/frontend/partials/addcontactsfrommap.html
@@ -19,7 +19,12 @@
             <h1 class="subtitle">Image of Location You Were At:</h1>
           </div>
           <div class="box">
-            <img src={{imgPath}} style="width: 100%">
+            <iframe
+                width="100%"
+                height="300"
+                frameborder="0" style="border:0"
+                src={{trustUrl(panoPath)}} allowfullscreen>
+            </iframe>
           </div>
         </div>
         <div class="column">
