--- a/frontend/partials/dashboard.html
+++ b/frontend/partials/dashboard.html
@@ -52,76 +52,112 @@
       <div class="columns">
         <div class="column is-two-thirds">
           <div class="box">
-            <table class="table is-hoverable">
+            <table class="table is-hoverable is-fullwidth">
               <thead>
                 <tr>
                   <th>
                     Patient Id
                   </th>
                   <th>
-                    Primary Doctor
+                    Last Name 
                   </th>
                   <th>
-                    Secondary Doctor
+                    First Name 
                   </th>
                   <th>
-                    Diagnosis Status
+                    Country 
+                  </th>
+                  <th> 
+                    Zip Code 
                   </th>
                   <th>
-                    Actions
+                    Degree of Seperation
+                  </th>
+                  <th>
+                    Risk Level 
+                  </th>
+                  <th>
+                    Find Out More
                   </th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <td>
-                    1386
+                    196
                   </td>
                   <td>
-                    Dr. Bob S.
+                    Shit
                   </td>
                   <td>
-                    Dr. Phil C.
+                    John
                   </td>
                   <td>
-                    <span class="tag is-danger">Overdue</span>
+                    China 
                   </td>
                   <td>
-                    <a href="patient.html"><button class="button">Edit</button></a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    1385
+                    1861
                   </td>
                   <td>
-                    Dr. Bob S.
+                    0
                   </td>
                   <td>
-                    Dr. Phil C.
+                    <span class="tag is-danger">Infected</span>
                   </td>
                   <td>
-                    <span class="tag is-warning">Pending</span>
-                  </td>
-                  <td>
-                    <a href="patient.html"><button class="button">Edit</button></a>
+                    <a href="patient.html"><button class="button">More Info</button></a>
                   </td>
                 </tr>
                 <tr>
                   <td>
-                    1376
+                    197
                   </td>
                   <td>
-                    Dr. Bob S.
+                    Jiang
                   </td>
                   <td>
-                    Dr. Phil C.
+                    Chris 
                   </td>
                   <td>
-                    <span class="tag is-success">Completed</span>
+                    China 
                   </td>
                   <td>
-                    <button class="button">Edit</button>
+                    1776
+                  </td>
+                  <td>
+                    1
+                  </td>
+                  <td>
+                    <span class="tag is-warning">1st Degree</span>
+                  </td>
+                  <td>
+                    <a href="patient.html"><button class="button">More Info</button></a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    198
+                  </td>
+                  <td>
+                    Doan (shit) 
+                  </td>
+                  <td>
+                    John
+                  </td>
+                  <td>
+                    USA
+                  </td>
+                  <td>
+                    1234
+                  </td>
+                  <td>
+                    2
+                  </td>
+                  <td>
+                    <span class="tag is-success">2nd+ Degree</span>
+                  </td>
+                  <td>
+                    <button class="button">More Info</button>
                   </td>
                 </tr>
               </tbody>
