--- a/frontend/partials/peopleContact.html
+++ b/frontend/partials/peopleContact.html
@@ -29,18 +29,15 @@
 	</script>
   </head>
     <body>
-      <section class="hero has-background-info is-medium">
+      <section class="hero has-background-info is-small">
         <div class="hero-body">
           <div class="container">
             <h1 class="has-text-white title has-text-centered">
-            People You Have Contacted With
+            People You Have Been In Contact With
             </h1>
           </div>
           <div class="container">
           <br>
-            <p class="has-text-white has-text-centered">
-            Please fill out the following form with all the people you have contacted with to prevent the spread of the disease.
-            </p>
           </div>
         </div>
       </section>
@@ -49,42 +46,7 @@
       <div class="container  has-text-centered">
         <div class="notification">
           <h6> 
-          Name?
-          </h6>
-        </div>
-      </div>
-    </section>
-    <section class="section">
-      <div class="container">
-        <div class="columns"> 
-          <div class="column"> 
-            <div class="field">
-              <div class="control">
-                <h7>Last Name</h7>
-                <input class="input" type="Last Name" placeholder="e.g. Doan">
-                  <br>
-                  <br>
-              </div>
-            </div>
-          </div>
-          <div class="column"> 
-            <div class="field">
-              <div class="control">
-                <h7>First Name</h7>
-                <input class="input" type="First Name" placeholder="e.g. John">
-                  <br>
-                  <br>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> 
-    <section>
-      <div class="container  has-text-centered">
-        <div class="notification">
-          <h6> 
-          People You Have Contacted With
+          People you have been in contact with during the incubation period. 
           </h6>
         </div>
       </div>
@@ -123,6 +85,17 @@
             </div>
           </div>
         </div>
+      <div class="column"> 
+        <div class="field">
+          <div class="control">
+            <h7>Email</h7>
+            <input class="input" type="email" placeholder="e.g. berniesanders2020@gmail.com">
+              <br>
+              <br>
+            </div>
+          </div>
+        </div>
+      </div>
       </div>
 	  <section class="section"> 
     <div class="buttons is-centered"> 
