--- a/frontend/partials/showingsymptoms.html
+++ b/frontend/partials/showingsymptoms.html
@@ -49,19 +49,21 @@
         <div class="container has-text-centered">
           <div class="section">
             <label class="radio">
-              <input type="radio" name="answer">
-                Yes
-            </label>
-            <label class="radio">
-              <input type="radio" name="answer">
-                No
-            </label>
+              <div class="buttons is-centered">
+                <div class="field is-grouped">
+        
+                    <div class="control">
+                      <button class="button is-link">Yes</button>
+                    </div>
+                    <div class="control">
+                      <button class="button is-link">No</button>
+                    </div>
+        
+                </div>
+                </div>
         </div>
         <div class = "buttons is-centered">
           <div class="field is-grouped">
-            <div class="control">
-              <button class="button is-link">Continue</button>
-            </div>
             <div class="control">
               <button class="button is-link is-light">Go Back</button>
             </div>
