--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -1,13 +1,4 @@
-  <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bulma Test</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  </head>
-    <body>
+    <div>
       <section class="hero has-background-info is-medium">
         <div class="hero-body">
           <div class="container">
@@ -211,5 +202,4 @@
       </div>
     </div>
   </section>
-  </body>
-</html>
+</div>
