--- a/frontend/partials/whatsymptoms.html
+++ b/frontend/partials/whatsymptoms.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bulma Test</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-
-  </head>
-  <body>
+  <div>
     <section class="hero has-background-info is-small">
       <div class="hero-body">
         <div class="container">
@@ -94,5 +84,4 @@
     </section>
 
 
-  </body>
-</html>
+  </div>
