--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -196,7 +196,7 @@
     <div class="buttons is-centered"> 
       <div class="field is-grouped">
         <div class="control">
-          <button class="button is-link">Continue</button>
+          <button class="button is-link" ng-click="nextPage('beenDiagnosed')">Continue</button>
         </div>
         
       </div>
