--- a/frontend/partials/showingsymptoms.html
+++ b/frontend/partials/showingsymptoms.html
@@ -43,7 +43,7 @@
                 <div class="field is-grouped">
         
                     <div class="control">
-                      <button class="button is-link">Yes</button>
+                      <button class="button is-link" ng-click="nextPage('whatsymptoms')">Yes</button>
                     </div>
                     <div class="control">
                       <button class="button is-link">No</button>
@@ -55,7 +55,7 @@
         <div class = "buttons is-centered">
           <div class="field is-grouped">
             <div class="control">
-              <button class="button is-link is-light">Go Back</button>
+              <button class="button is-link is-light" ng-click="nextPage('beenDiagnosed')">Go Back</button>
             </div>
           </div>
         </div>
