--- a/frontend/partials/whatsymptoms.html
+++ b/frontend/partials/whatsymptoms.html
@@ -70,10 +70,10 @@
         <div class="field is-grouped">
 
             <div class="control">
-              <button class="button is-link">Continue</button>
+              <button class="button is-link" ng-click="nextPage('entercontacts')">Continue</button>
             </div>
             <div class="control">
-              <button class="button is-link is-light">Go Back</button>
+              <button class="button is-link is-light" ng-click="nextPage('showingsymptoms')">Go Back</button>
             </div>
 
         </div>
