--- a/frontend/partials/beenDiagnosed.html
+++ b/frontend/partials/beenDiagnosed.html
@@ -1,49 +1,56 @@
-  <div>
-    <section class="hero has-background-info is-small">
-      <div class="hero-body">
-        <div class="container">
-          <h1 class="title has-text-centered has-text-white">
-            Questionnaire
-          </h1>
-        </div>
+<div>
+  <section class="hero has-background-info is-small">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title has-text-centered has-text-white">
+          Questionnaire
+        </h1>
       </div>
-    </section>
-    <sesction>
-        <br>
-        <div class="container  has-text-centered">
-          <div class="notification box">
-            <h6>  
-              Have you been diagnosed with the Coronovirus?
-            </h6>
-          </div>
-        </div>
-    </sesction>
-    <section>
-        <div class="container  has-text-centered">
-        <div class="section">
-          <div class="buttons is-centered">
-            <div class="field is-grouped">
-    
-                <div class="control">
-                  <button class="button is-link">Yes</button>
-                </div>
-                <div class="control">
-                  <button class="button is-link">No</button>
-                </div>
-    
-            </div>
-            </div>
-
-        </div>
+    </div>
+  </section>
+  <sesction>
+    <br />
+    <div class="container  has-text-centered">
+      <div class="notification box">
+        <h6>
+          Have you been diagnosed with the Coronovirus?
+        </h6>
       </div>
-      <div class="buttons is-centered">
-        <div class="field is-grouped">
+    </div>
+  </sesction>
+  <section>
+    <div class="container  has-text-centered">
+      <div class="section">
+        <div class="buttons is-centered">
+          <div class="field is-grouped">
             <div class="control">
-              <button class="button is-link is-light">Go Back</button>
+              <button class="button is-link" ng-click="nextPage('howlong')">
+                Yes
+              </button>
+            </div>
+            <div class="control">
+              <button
+                class="button is-link"
+                ng-click="nextPage('showingsymptoms')"
+              >
+                No
+              </button>
             </div>
           </div>
         </div>
-        
-    </section>
-
-  </div>
+      </div>
+    </div>
+    <div class="buttons is-centered">
+      <div class="field is-grouped">
+        <div class="control">
+          <button
+            class="button is-link is-light"
+            ng-click="nextPage('infopage')"
+          >
+            Go Back
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
