--- a/frontend/partials/howlong.html
+++ b/frontend/partials/howlong.html
@@ -29,10 +29,10 @@
       <div class="buttons is-centered">
         <div class="field is-grouped">
             <div class="control">
-              <button class="button is-link">Continue</button>
+              <button class="button is-link" ng-click="nextPage('entercontacts')">Continue</button>
             </div>
             <div class="control">
-              <button class="button is-link is-light">Go Back</button>
+              <button class="button is-link is-light" ng-click="nextPage('beenDiagnosed')">Go Back</button>
             </div>
           </div>
         </div>
