--- a/frontend/partials/login.html
+++ b/frontend/partials/login.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -68,7 +66,7 @@ input.login-error, input.login-error:hover, input.login-error:focus, input.login
 <div class="container has-text-centered">
 <div class="column is-4 is-offset-4">
 
-  <h1 class="is-size-1">Title of App</h1>
+<h1 class="is-size-1">EpTracker</h1>
 
 <div class="box">
 <section id="login-error-message"></section>
