--- a/frontend/partials/dashboard.html
+++ b/frontend/partials/dashboard.html
@@ -87,7 +87,7 @@
                     196
                   </td>
                   <td>
-                    Shit
+                    Smith
                   </td>
                   <td>
                     John
@@ -139,7 +139,7 @@
                     198
                   </td>
                   <td>
-                    Doan (shit) 
+                    Doan  
                   </td>
                   <td>
                     John
