--- a/frontend/partials/patient.html
+++ b/frontend/partials/patient.html
@@ -61,62 +61,37 @@
             <!-- <progress class="progress is-warning" value="65" max="100">In Progress</progress> -->
             <div class="field is-grouped is-grouped-multiline">
               <div class="control">
-                <span class="tag is-warning">Status: Pending...</span>
+                <span class="tag is-warning">Status: Investigating...</span>
               </div>
               <div class="control">
-                <div class="tags has-addons">
-                  <span class="tag is-success">Primary</span>
-                  <span class="tag">Dr. Bob S.</span>
-                </div>
+                <span class="tag is-danger">Infected</span>
               </div>
-              <div class="control">
-                <span class="tags has-addons">
-                  <span class="tag is-success">Secondary</span>
-                  <span class="tag">Dr. Phil C.</span>
-                </span>
-              </div>
-              <div class="control">
-                <span class="tag is-danger">Symptom Dispute</span>
-              </div>
-            </div>
-            <div class="field">
-              <label class="label">Add a Symptom</label>
-              <div class="control">
-                <div class="select">
-                  <select>
-                    <option>
-                      Coughing
-                    </option>
-                    <option>
-                      Weakness
-                    </option>
-                    <option>
-                      Short of breath
-                    </option>
-                  </select>
-                </div>
+              <div class="container">
+                <br>
+                <h4><b>Smith, John</b></h4>
+                <br>
               </div>
             </div>
             <br />
             <div class="tile is-ancestor" style="flex-wrap: wrap">
               <div class="tile is-parent is-4">
                 <div class="tile is-child notification" style="vertical-align: center">
-                  Coughing <button class="delete"></button>
+                  Coughing 
                 </div>
               </div>
               <div class="tile is-parent is-4">
                 <div class="tile is-child notification">
-                  Weakness <button class="delete"></button>
+                  Weakness 
                 </div>
               </div>
               <div class="tile is-parent is-4">
                 <div class="tile is-child notification">
-                  Nausea <button class="delete"></button>
+                  Nausea 
                 </div>
               </div>
               <div class="tile is-parent is-4">
                 <div class="tile is-child notification">
-                  Vomiting <button class="delete"></button>
+                  Vomiting 
                 </div>
               </div>
             </div>
