--- a/frontend/partials/locationhistory.html
+++ b/frontend/partials/locationhistory.html
@@ -1,5 +1,14 @@
 <html>
   <head>
+    <section class="hero has-background-info is-small">
+      <div class="hero-body">
+        <div class="container">
+          <h1 class="title has-text-centered has-text-white">
+            Location history
+          </h1>
+        </div>
+      </div>
+    </section>
     <title>Quick Start - Leaflet</title>
 
     <meta charset="utf-8" />
