--- a/frontend/partials/locationhistory.html
+++ b/frontend/partials/locationhistory.html
@@ -38,7 +38,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="background-color: #f7f7f7;">
     <div class="container">
       <div class="box">
         <div id="mapid"></div>
