--- a/frontend/partials/locationhistory.html
+++ b/frontend/partials/locationhistory.html
@@ -6,6 +6,10 @@
           <h1 class="title has-text-centered has-text-white">
             Location history
           </h1>
+
+          <p class="has-text-centered has-text-white">
+            Select the places that you have been:
+          </p>
         </div>
       </div>
     </section>
