--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -2,9 +2,21 @@
       <section class="hero has-background-info is-medium">
         <div class="hero-body">
           <div class="container">
-            <h1 class="has-text-white title has-text-centered">
-            Questionnaire 
-            </h1>
+            <nav class="level">
+              <div class="level-left">
+                <figure class="image">
+                  <img src="whiteTransparent.png" alt="virus logo" style="width:75px; length:47.8125px; float:left"/>
+                </figure>
+                <h4 class="subtitle is-4 has-text-white">
+                  EpTracker
+                </h4>  
+              </div>
+              <div class="level-right">
+                <h1 class="title has-text-white">
+                  Questionnaire
+                </h1>
+              </div>
+            </nav>
           </div>
           <div class="container">
           <br>
