--- a/frontend/partials/patient.html
+++ b/frontend/partials/patient.html
@@ -1,7 +1,13 @@
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link
+    href="https://use.fontawesome.com/releases/v5.0.6/css/all.css"
+    rel="stylesheet"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css"
+  />
   <link rel="stylesheet" href="main.css" />
   <base href="/" />
   <style>
@@ -38,13 +44,13 @@
     <div class="container">
       <div class="navbar-brand">
         <a href="/" class="navbar-item">
-          <img src="https://raw.githubusercontent.com/sluh-hackclub/diagnosys/master/logo/NEW1.png" style="max-height: 50px"/>
+          <!-- <img src="https://raw.githubusercontent.com/sluh-hackclub/diagnosys/master/logo/NEW1.png" style="max-height: 50px"/> -->
+          Logo Goes Here
         </a>
       </div>
       <div class="navbar-menu">
         <div class="navbar-end">
-          <a class="navbar-item">
-          </a>
+          <a class="navbar-item"> </a>
         </div>
       </div>
     </div>
@@ -67,31 +73,34 @@
                 <span class="tag is-danger">Infected</span>
               </div>
               <div class="container">
-                <br>
+                <br />
                 <h4><b>Smith, John</b></h4>
-                <br>
+                <br />
               </div>
             </div>
             <br />
             <div class="tile is-ancestor" style="flex-wrap: wrap">
               <div class="tile is-parent is-4">
-                <div class="tile is-child notification" style="vertical-align: center">
-                  Coughing 
+                <div
+                  class="tile is-child notification"
+                  style="vertical-align: center"
+                >
+                  Coughing
                 </div>
               </div>
               <div class="tile is-parent is-4">
                 <div class="tile is-child notification">
-                  Weakness 
+                  Weakness
                 </div>
               </div>
               <div class="tile is-parent is-4">
                 <div class="tile is-child notification">
-                  Nausea 
+                  Nausea
                 </div>
               </div>
               <div class="tile is-parent is-4">
                 <div class="tile is-child notification">
-                  Vomiting 
+                  Vomiting
                 </div>
               </div>
             </div>
