--- a/frontend/partials/dashboard.html
+++ b/frontend/partials/dashboard.html
@@ -61,8 +61,9 @@
           </div>
         </div>
       </div>
+
       <div class="columns">
-        <div class="column ">
+        <div class="column is-full">
           <div class="box">
             <table class="table is-hoverable is-fullwidth">
               <thead>
@@ -93,6 +94,7 @@
                   </th>
                 </tr>
               </thead>
+
               <tbody>
                 <tr ng-repeat="patient in patients">
                   <td>
@@ -128,83 +130,7 @@
             </table>
           </div>
         </div>
-        <!-- <div class="column is-one-third">
-          <div class="box">
-            <aside class="menu">
-              <p class="menu-label">
-                General
-              </p>
-              <ul class="menu-list">
-                <li>
-                  <a>Home</a>
-                </li>
-                <li>
-                  <a class="is-active">Dashboard</a>
-                </li>
-                <li>
-                  <a>Logout</a>
-                </li>
-              </ul>
-              <p class="menu-label">
-                Actions
-              </p>
-              <ul class="menu-list">
-                <li>
-                  <a>Patients</a>
-                  <ul>
-                    <li>
-                      <a>Manage Patients</a>
-                    </li>
-                    <li>
-                      <a>Process Diagnosis</a>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </aside>
-          </div>
-        </div> -->
       </div>
     </div>
   </div>
-
-  <!-- <div class="input-group">
-      <div class="input-group-prepend">
-        <span class="input-group-text" style="border-radius: 0">Search by Donor Name</span>
-      </div>
-      <input type="text" class="form-control" ng-model="donorName" ng-change="donorSearch()" style="border-radius: 0">
-    </div>
-    <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="card" ng-repeat="donor in donors" ng-click="donorClick(donor.id)">
-              <div class="card-body">
-                {{donor.name}}
-                <br />
-                <small><i class="fa fa-home"></i> {{donor.address}}</small>
-              </div>
-            </div>
-          </div>
-        </div>
-    </div>
-
-  <div class="modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Options</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close" ng-click="close()">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>Would you like to create a new item for this donor or view their tax letter?</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" ng-click="taxletter()">View Tax Letter</button>
-        <button type="button" class="btn btn-primary" ng-click="createitem()">Create Item</button>
-      </div>
-    </div>
-  </div>
-  </div> -->
 </body>
