--- a/frontend/partials/infopage.html
+++ b/frontend/partials/infopage.html
@@ -30,7 +30,7 @@
     <br>
     <section>
       <div class="container  has-text-centered">
-        <div class="notification">
+        <div class="notification box">
           <h6> 
           Name?
           </h6>
@@ -65,7 +65,7 @@
     </section> 
     <section>
       <div class="container  has-text-centered">
-        <div class="notification">
+        <div class="notification box">
           <h6> 
           Sex?
           </h6>
@@ -88,7 +88,7 @@
   <section>
     <br>
     <div class="container">
-      <div class="notification">
+      <div class="notification box">
         <h6 class="has-text-centered">
           Age? 
         </h6>
@@ -107,7 +107,7 @@
   </section> 
   <section>
     <div class="container  has-text-centered">
-      <div class="notification">
+      <div class="notification box">
         <h6> 
           Address? 
           </h6>
@@ -173,7 +173,7 @@
   </section> 
   <section>
     <div class="container  has-text-centered">
-      <div class="notification">
+      <div class="notification box">
         <h6> 
           Contact Information 
         </h6>
